--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -11,8 +11,6 @@
         android:id="@+id/storebanner"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
         android:background="#FFFFFF">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -61,7 +59,6 @@
         android:scaleY=".8"
         android:transformPivotX="15dp"
         android:transformPivotY="05dp" />
-
 
         <TextView
         android:id="@+id/tv_start_time"
@@ -118,6 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/storebanner">
     <ListView
+        android:id="@+id/lv_product_list"
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_marginLeft="10dp"
