--- a/app/src/main/res/layout/product.xml
+++ b/app/src/main/res/layout/product.xml
@@ -41,4 +41,13 @@
         android:layout_below="@+id/tv_product_category"
         android:textColor="@color/colorPrimary"/>
 
+    <TextView
+        android:id="@+id/tv_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/tv_product_prize"
+        android:layout_below="@+id/tv_product_category"
+        android:layout_marginLeft="10dp"
+        android:text="Price"/>
+
 </RelativeLayout>
