--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#7C7777</color>
     <color name="colorAccent">#7C7777</color>
     <color name="duskyellow">#FFFF00</color>
-    <color name="lightgrey">#b2b2b2</color>
+    <color name="lightgrey">#d7d3d3</color>
 </resources>
