--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -4,119 +4,131 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/R1"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/civ_store_logo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/target_logo" />
-
-    <TextView
-        android:id="@+id/tv_store_name"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_toRightOf="@+id/civ_store_logo"
-        android:layout_marginLeft="10dp"
-        android:background="@drawable/background"
-        android:text="Store Name"
-        android:textColor="#000000"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/tv_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tv_store_name"
-        android:layout_alignStart="@+id/tv_store_name"
-        android:layout_below="@+id/tv_store_name"
-        android:layout_marginTop="3dp"
-        android:text="Address" />
-
-    <RatingBar
-        android:id="@+id/rb_store_rating"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_alignBottom="@+id/civ_store_logo"
-        android:layout_below="@+id/tv_address"
-        android:layout_marginLeft="105dp"
-        android:layout_marginTop="05dp"
-        android:isIndicator="true"
-        android:scaleX=".7"
-        android:scaleY=".7"
-        android:transformPivotX="15dp"
-        android:transformPivotY="5dp"
-    />
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="05dp"
-        android:layout_below="@+id/rb_store_rating"
-        android:src="@mipmap/cart_logo"
-        android:id="@+id/iv_store_pic" />
-
-    <TextView
-        android:id="@+id/tv_start_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_store_pic"
-        android:layout_marginLeft="20dp"
-        android:textColor="@color/colorPrimary"
-        android:text="Delivery Timing:" />
-
-    <TextView
-        android:id="@+id/tv_end_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/iv_store_pic"
-        android:layout_toRightOf="@id/tv_starttime_value"
         android:layout_marginLeft="5dp"
-        android:textColor="@color/colorPrimary"
-        android:text="to" />
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:background="@drawable/round_list_view">
 
-    <TextView
-        android:id="@+id/tv_delivery_fee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_store_pic"
-        android:layout_toRightOf="@+id/tv_endtime_value"
-        android:layout_marginLeft="20dp"
-        android:textColor="@color/colorPrimary"
-        android:text="Delivery Fees:" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/civ_store_logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/target_logo" />
 
-    <TextView
-        android:id="@+id/tv_starttime_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/iv_store_pic"
-        android:layout_toRightOf="@+id/tv_start_time"
-        android:layout_marginLeft="10dp"
-        android:textColor="@color/colorPrimary"
-        android:text="10AM"/>
+        <TextView
+            android:id="@+id/tv_store_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/civ_store_logo"
+            android:background="@drawable/background"
+            android:text="Store Name"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_store_pic"
-        android:layout_toRightOf="@+id/tv_end_time"
-        android:layout_marginLeft="5dp"
-        android:id="@+id/tv_endtime_value"
-        android:textColor="@color/colorPrimary"
-        android:text="10PM"/>
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tv_store_name"
+            android:layout_alignStart="@+id/tv_store_name"
+            android:layout_below="@+id/tv_store_name"
+            android:text="Address" />
 
-    <TextView
-        android:id="@+id/tv_fee_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_store_pic"
-        android:layout_toRightOf="@id/tv_delivery_fee"
-        android:layout_marginLeft="10dp"
-        android:text="PKR 500"
-        android:textColor="@color/colorPrimary"/>
+        <RatingBar
+            android:id="@+id/rb_store_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_below="@+id/tv_address"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@+id/civ_store_logo"
+            android:isIndicator="true"
+
+            android:scaleX=".7"
+            android:scaleY=".7"
+            android:transformPivotX="0dp"
+            android:transformPivotY="10dp" />
+
+        <ImageView
+            android:id="@+id/iv_store_pic"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_below="@+id/rb_store_rating"
+            android:layout_marginTop="05dp"
+            android:src="@mipmap/cart_logo" />
+
+        <TextView
+            android:id="@+id/tv_start_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_store_pic"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:text="Delivery Timing:"
+            android:textColor="@color/colorPrimary"/>
+
+        <TextView
+            android:id="@+id/tv_end_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/iv_store_pic"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@id/tv_starttime_value"
+            android:text="to" />
+
+        <TextView
+            android:id="@+id/tv_delivery_fee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_store_pic"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@+id/tv_endtime_value"
+            android:text="Delivery Fees:"
+            android:textColor="@color/colorPrimary" />
+
+        <TextView
+            android:id="@+id/tv_starttime_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_store_pic"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@+id/tv_start_time"
+            android:text="10AM" />
+
+        <TextView
+            android:id="@+id/tv_endtime_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_store_pic"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@+id/tv_end_time"
+            android:text="10PM" />
+
+        <TextView
+            android:id="@+id/tv_fee_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_store_pic"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@id/tv_delivery_fee"
+            android:text="500" />
+    </RelativeLayout>
 
 </RelativeLayout>
