--- a/app/src/main/res/layout/activity_single_product_layout.xml
+++ b/app/src/main/res/layout/activity_single_product_layout.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         android:id="@+id/iv_product_image"
         android:src="@drawable/target_logo"/>
     <TextView
@@ -19,7 +19,7 @@
         android:layout_below="@+id/iv_product_image"
         android:text="Name :"
         android:textSize="20sp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:textStyle="bold"
@@ -105,7 +105,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"/>
     <TextView
-        android:id="@+id/btn_quantity"
+        android:id="@+id/tv_quantity"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_below="@+id/tv_category"
@@ -122,7 +122,7 @@
         android:layout_height="50dp"
         android:id="@+id/btn_quantity_minus"
         android:layout_below="@+id/tv_category"
-        android:layout_toLeftOf="@+id/btn_quantity"
+        android:layout_toLeftOf="@+id/tv_quantity"
         android:layout_marginTop="70dp"
         android:background="@color/colorPrimary"
         android:text="-"
@@ -133,7 +133,7 @@
         android:layout_height="50dp"
         android:id="@+id/btn_quantity_plus"
         android:layout_below="@+id/tv_category"
-        android:layout_toRightOf="@+id/btn_quantity"
+        android:layout_toRightOf="@+id/tv_quantity"
         android:background="@color/colorPrimary"
         android:layout_marginTop="70dp"
         android:text="+"
