--- a/app/src/main/res/layout/product.xml
+++ b/app/src/main/res/layout/product.xml
@@ -2,12 +2,13 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/P1"
+    android:background="#ffff"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_product_image"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -18,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/iv_product_image"
         android:text="Name"
         android:textStyle="bold"
@@ -50,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/tv_product_prize"
         android:layout_below="@+id/tv_product_category"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginBottom="5dp"
         android:text="Price"/>
 
