--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -18,8 +18,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/civ_store_logo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:src="@drawable/target_logo" />
@@ -48,17 +48,14 @@
         <RatingBar
             android:id="@+id/rb_store_rating"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/tv_address"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/civ_store_logo"
             android:isIndicator="true"
-
-            android:scaleX=".7"
-            android:scaleY=".7"
+            style="@style/Widget.AppCompat.RatingBar.Small"
             android:transformPivotX="0dp"
-            android:transformPivotY="10dp" />
+            android:transformPivotY="0dp" />
 
         <ImageView
             android:id="@+id/iv_store_pic"
