--- a/app/src/main/res/layout/activity_provider.xml
+++ b/app/src/main/res/layout/activity_provider.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +8,7 @@
     android:background="@color/lightgrey"
     android:weightSum="10"
     android:orientation="vertical"
-    tools:context="com.example.muneebahmad.edwbqfgb.Main2Activity">
+    tools:context="com.example.muneebahmad.edwbqfgb.Provider">
 
     <RelativeLayout
         android:id="@+id/storebanner"
@@ -129,10 +130,10 @@
         <ListView
             android:id="@+id/lv_product_list"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            tools:listitem="@layout/product" />
+            android:layout_height="410dp"
+            android:background="@drawable/round_list_view"
+            tools:listitem="@layout/order_list_layout" />
     </RelativeLayout>
-
     <RelativeLayout
         android:id="@+id/checkout"
         android:background="#ffff"
@@ -142,15 +143,14 @@
         android:layout_below="@+id/list_view">
 
         <Button
-            android:id="@+id/tv_check_out"
+            android:id="@+id/btn_order_update"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="  Checkout  "
+            android:text="  Refresh List  "
             android:background="@color/colorPrimary"
             android:layout_centerHorizontal="true"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="#ffff"/>
     </RelativeLayout>
-
 </LinearLayout>
